    from the archive instead.
  * Stop on runlevels [016] rather than on the start of shutdown job. (LP: #542627)
  * Move packaging to git based commands.
  * If no themes are included, don't make bad theme stubs in debian/control.
  * Update control files.
  * Add an epoch because of the changing fixes->fixes and trunk->master to allow
    proper upgrades.

  [ Thomas Mashos ]
  * Make mythplugins replace mythmovies

 -- Thomas Mashos <tgm4883@gmail.com>  Fri, 03 Dec 2010 21:17:51 -0800

mythtv (1:0.24.0+fixes27305-0ubuntu1) natty; urgency=low

  [ Mario Limonciello ]
  * New 0.24 checkout (27305)
  * Modify the upstart script to load the LANG first. (LP: #541042)
  * Modify configure_mythplugins_without_mythtv_installed.patch to remove 
    SYSROOT from the mytharchive build process for it's additional support 
    files. (LP: #674626)
  * Remove unused package, mythmovies from build process.
  * Clean up the dependencies of a few packages, and harden them to the binary
    version.
  * Disable XvMC as it's causing crashes.  VDPAU is better off in these 
    situations anyhow (LP: #660833)
  * Remove sparc support.
  * Make sure mysql is pingable before starting the backend (LP: #609402)
  * Fixup some linitians:
    - Extra license files
    - Longer extended descriptions
    - Duplicated synopsis
    - Init.d script
  * Add a new debian/rules rule called 'update-upstream-changelog'.  
    This finds all of the most recent svn commit messages and 
    creates changelog entries.
  * Add a debian/README.Debian for explaining how to work with the package.
  * In the update-upstream-changelog rule, search for the word mythbuntu
    in the version string.  If found, find the latest version on the PPA
    to compare against.
  * Get rid of the newest-revision rule in favor of one that will actually
    update the changelog/checkout to the new version.
  * Add a new helper script debian/do-new-release.sh that will run all of